# django-wso2is-auth

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
django_wso2is/: __init__.py  apps.py  authentication.py  backends.py  conf.py  errors.py  signals.py  token.py  utils.py
django_wso2is/api/: serializers.py  urls.py  views.py
django_wso2is/management/commands/: sync_wso2is_users.py
